[package]
name = "weather_tool"
version = "0.1.0"
authors = ["MFRIbrahim <Mustafa.Ibrahim@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.40"
isahc = "1.3.1"
serde_json = "1.0.64"
lazy_static = "1.4.0"
